--- a/nodejs-helloworld/package.json
+++ b/nodejs-helloworld/package.json
@@ -1,7 +1,8 @@
- {
-  "name": "nodejs-helloworld",
- ...output omitted...
-  "dependencies": {
-    "express": "4.14.x"
-  }
- }
+ ...
+  "description": "Hello World!",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js"
+  },
+  "author": "Red Hat Training",
+ ...
